--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Chandrakanth",
   "license": "ISC",
   "dependencies": {
+    "ajax": "0.0.4",
     "webpack": "^4.11.1"
   },
   "devDependencies": {
